# mcp-security

./: .gitignore  README.md  docker-compose.yml
detection/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  TESTING.md  docker-entrypoint.sh  main.py  pyproject.toml
detection/configs/: profiles.yaml
detection/detection/: __init__.py  cli.py
detection/detection/core/: __init__.py  models.py  registry.py  session.py
detection/detection/knowledge/: README.md  __init__.py  service.py
detection/detection/mitigation/: __init__.py  mitigation_engine.py
detection/detection/pipelines/: __init__.py  dynamic.py  rag.py  static.py
detection/detection/plugins/: __init__.py
detection/detection/reporting/: __init__.py  cef_formatter.py  report_builder.py
detection/detection/rules/: __init__.py  keywords.toml  keywords.yaml  loader.py  (+1 more)
detection/docs/: detection-roadmap.md  ignore_words.txt  mcptox_static_analysis.md
detection/examples/: README.md  dynamic_analysis_demo.py  prepare_mcptox_samples.py  run_mcptox_detection.py  static_analysis_test.py
detection/pytest/: __init__.py  runner.py
detection/sandbox/: Dockerfile  QUICKSTART.md  README.md  docker-compose.yml
detection/tests/: test_placeholder.py  test_rules_loader.py
mcp-tools-detection/: .gitignore  Dockerfile  QUICK_START.md  README.md  UV_GUIDE.md  app.py  config.py  db_storage_example.py  detection_adapter.py  detection_rules.yaml  detector.py  docker-compose.yml  main.py  pyproject.toml  start.bat  start.sh  storage.py  test_api.py
mcp-tools-detection/templates/: index.html  test.html
(+55 files in other folders)
